# pergola-projecttools-python

./: .gitignore  Makefile  README.md  buildAndPublish.sh  pyproject.toml  test-requirements.txt
src/pergolaprojecttools/: config_util.py  error_util.py  trace_util.py
src/pergolaprojecttools/log/: log.py
tests/: test_config.py
tests/config/: config-readme.json  config.json
